--- a/index.html
+++ b/index.html
@@ -9,8 +9,45 @@
 </head>
 
 <body>
-    <h1>This text is heading</h1>
-    <p>This is sub-heading</p>
+    <section class="wrapper">
+        <aside class="side-nav">
+            <nav>
+                <ul>
+                    <li><a href="#fontSizesSection">Font sizes</a></li>
+                    <li><a href="#placeholderSection">Placeholder</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <section class="content">
+            <section id="fontSizesSection" class="topic">
+                <h1 class="topic-title">Font sizes</h1>
+                <section>
+                    <p>How to use</p>
+                    <pre class="code-snippet">&lt;p class="font-x"&gt;Text&lt;/p&gt;</pre>
+                    <p>x: can be any number b/w 8-50px</p>
+                    <pre class="code-snippet">&lt;p class="font-14"&gt;Text&lt;/p&gt;</pre>
+                    <p>Add a number between the above range and get desired font-size for text elements.</p>
+                </section>
+            </section>
+            <hr class="hr-divider" />
+            <section id="placeholderSection" class="topic">
+                <h1 class="topic-title">Placeholder</h1>
+                <section>
+                    <p>How to use</p>
+                    <pre class="code-snippet">
+.input-field,
+    textarea{
+    @include placeholder{
+    color:red;
+    font-size:12px;
+    }
+}</pre>
+                    <p>Suppose we have to change the styles of placeholder in our input field, just include Placeholder
+                        mixin in the input field and change the properties of placeholder accordingly.</p>
+                </section>
+            </section>
+        </section>
+    </section>
 </body>
 
 </html>
