--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                     <pre class="code-snippet">&lt;p class="font-14"&gt;Text&lt;/p&gt;</pre>
                     <p>Add a number between the above range and get desired font-size for text elements.</p>
                 </section>
+                <section style="margin-top: 15px;">
+                    <h4>Example</h4>
+                    <p class="font-13">Filter doppio, cappuccino black fair trade, strong seasonal aromatic and brewed
+                        to go latte. Milk to go, crema cultivar
+                        cup shop fair trade caffeine iced organic. Saucer dripper iced mug siphon java white in acerbic.
+                    </p>
+                </section>
             </section>
             <hr class="hr-divider" />
             <section id="placeholderSection" class="topic">
@@ -35,15 +42,19 @@
                 <section>
                     <p>How to use</p>
                     <pre class="code-snippet">
-.input-field,
-    textarea{
+.input-field{
     @include placeholder{
-    color:red;
-    font-size:12px;
+        color:red;
+        font-size:12px;
     }
 }</pre>
                     <p>Suppose we have to change the styles of placeholder in our input field, just include Placeholder
-                        mixin in the input field and change the properties of placeholder accordingly.</p>
+                        mixin in the input field (selected by class/id) and change the properties of placeholder
+                        accordingly.</p>
+                </section>
+                <section style="margin-top: 15px;">
+                    <h4>Example</h4>
+                    <input class="input-field" type="text" placeholder="Enter name" />
                 </section>
             </section>
         </section>
