--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
                     <br/>
                     <p>How to use</p>
 <pre class="code-snippet">
-    
-    &#60;button class="success-btn large"&#62;large btn&#60;/button&#62; <br/>
-    &#60;button class="success-btn"&#62;Regular btn&#60;/button&#62; <br/>
-    &#60;button class="secondary-btn"&#62;Secondary btn&#60;/button&#62; <br/> 
-    &#60;button class="cancel-btn"&#62;Cancel Btn&#60;/button&#62; <br/>
-    &#60;button class="success-btn" disabled&#62;Disable Btn&#60;/button&#62;
+&#60;button class="success-btn large"&#62;large btn&#60;/button&#62; <br/>
+&#60;button class="success-btn"&#62;Regular btn&#60;/button&#62; <br/>
+&#60;button class="secondary-btn"&#62;Secondary btn&#60;/button&#62; <br/> 
+&#60;button class="cancel-btn"&#62;Cancel Btn&#60;/button&#62; <br/>
+&#60;button class="success-btn" disabled&#62;Disable Btn&#60;/button&#62;
 </pre>
 <br/>
 <p>For SCSS customisation</p>
@@ -77,9 +76,9 @@
 <pre class="code-snippet">
 'btn' is a mixin, parameter is used in a sequence and need to be update in a same format only, sequence mentioned below -
 
-<b> - @include btn(padding, background-color, font-size, border-radius, text-color, border-color)</b>
+<b>@include btn(padding, background-color, font-size, border-radius, text-color, border-color)</b>
 
-<u>complete code</u>
+<u>How to use the mixin in class</u>
 
     .success-btn{
         @include btn(12px 20px, map-get($color, primary), 16px, 5px, #fff, transparent);
@@ -87,6 +86,12 @@
           background: map-get($color, primary-hover);
         }
       }
+
+
+Disable button parameter sequence
+
+<b>@include disable(background-color, text-color, border-color);</b>
+
 </pre>
 
 
@@ -171,9 +176,8 @@
 <pre class="code-snippet">
     &#60;span class="icon-selected"&#62;&#60;/span&#62; 
     &#60;span class="icon-action_dots"&#62;&#60;/span&#62;
-
-    copy the span tag and update the class name as given above
 </pre>
+<p>copy the span tag and update the class name as given above</p>
             </section>
         </section>
     </section>
