--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#placeholderSection">Placeholder</a></li>
                     <li><a href="#buttonsSection">Buttons</a></li>
                     <li><a href="#iconsSection">Icons</a></li>
+                    <li><a href="#mediaSection">Media Querie</a></li>
                 </ul>
             </nav>
         </aside>
@@ -178,6 +179,32 @@ Disable button parameter sequence
     &#60;span class="icon-action_dots"&#62;&#60;/span&#62;
 </pre>
 <p>copy the span tag and update the class name as given above</p>
+            </section>
+            <hr class="hr-divider">
+            <section id="mediaSection" class="topic">
+                <h1 class="topic-title">Media Queries</h1>
+                <p>How to use - </p>
+<pre class="code-snippet">
+For mobile phone use <b>for-phone-only</b>
+For table/Ipad use  <b>for-tablet</b>
+For Desktop use  <b>for-desktop</b>
+example given below -:
+
+
+.topic-title{
+    font-size: 24px;
+    @include for-phone-only {    
+        font-size: 20px;
+    }
+    @include for-tablet {    
+        font-size: 22px;
+    }
+    @include for-large-desktop{
+        font-size: 28px;
+    }
+}
+
+</pre>
             </section>
         </section>
     </section>
