add background theme color

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
        function onChageTheme(theme) {
             if (theme) {
                 var el = document.getElementById('base');
-                el.classList.remove('light-theme');
-                el.classList.add('dark-theme');
+                el.classList.add('light-theme');
+                el.classList.remove('dark-theme');
             } else {
                 var el = document.getElementById('base');
                 el.classList.remove('light-theme');
